--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node server.js"
+    "start": "ts-node server",
+    "dev": "nodemon"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
+    "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.1"
   }
