--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
+    "@types/node": "^10.11.3",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.1"
