Use decorators to use sockets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "module": "commonjs",
     "sourceMap": true,
-    "lib": ["esnext"]
+    "lib": ["esnext"],
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "include": ["server/**/*.ts"],
   "exclude": ["node_modules"]
