--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@decorators/socket": "^3.1.0",
     "express": "^4.16.3",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
+    "@decorators/di": "^1.0.2",
     "@types/node": "^10.11.3",
     "@types/socket.io": "^1.4.38",
     "nodemon": "^1.18.4",
