--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node server",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@decorators/socket": "^3.1.0",
+    "@types/jest": "^23.3.3",
     "express": "^4.16.3",
-    "socket.io": "^2.1.1"
+    "jest": "^23.6.0",
+    "socket.io": "^2.1.1",
+    "ts-jest": "^23.10.3"
   },
   "devDependencies": {
     "@decorators/di": "^1.0.2",
@@ -21,5 +25,22 @@
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.1"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "server/**/*.{ts,tsx}"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testMatch": [
+      "**/__tests__/**/*.(ts|js|tsx|jsx)",
+      "**/?(*.)(spec|test).ts?(x)"
+    ],
+    "testEnvironment": "node"
   }
 }
