--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "@decorators/socket": "^3.1.0",
-    "@types/jest": "^23.3.3",
     "express": "^4.16.3",
-    "jest": "^23.6.0",
-    "socket.io": "^2.1.1",
-    "ts-jest": "^23.10.3"
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "@decorators/di": "^1.0.2",
+    "@types/jest": "^23.3.3",
     "@types/node": "^10.11.3",
     "@types/socket.io": "^1.4.38",
+    "jest": "^23.6.0",
     "nodemon": "^1.18.4",
+    "ts-jest": "^23.10.3",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.1"
   },
