--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node server",
-    "dev": "nodemon",
+    "dev": "set NODE_ENV=development && nodemon",
     "test": "jest"
   },
   "author": "",
@@ -26,6 +26,7 @@
     "@types/supertest": "^2.0.6",
     "jest": "^23.6.0",
     "nodemon": "^1.18.4",
+    "rimraf": "^2.6.2",
     "supertest": "^3.3.0",
     "ts-jest": "^23.10.3",
     "ts-loader": "^5.2.1",
