--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node server",
-    "dev": "set NODE_ENV=development && nodemon",
-    "test": "jest"
+    "dev": "nodemon",
+    "test": "jest",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@decorators/socket": "^3.1.0",
     "express": "^4.16.3",
+    "phaser": "^3.14.0",
     "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "webpack": "^4.20.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.2"
@@ -31,7 +35,8 @@
     "ts-jest": "^23.10.3",
     "ts-loader": "^5.2.1",
     "ts-node": "^7.0.1",
-    "typescript": "^3.1.1"
+    "typescript": "^3.1.1",
+    "webpack-cli": "^3.1.2"
   },
   "jest": {
     "collectCoverageFrom": [
